# verification-contract

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.offchain  LICENSE  README.md  corrections_roadmap.md  deNotary_Updated_Concept_Verification_Roadmap_EN (2).docx  denotary-context.md  docker-compose.offchain.yml
config/: offchain.compose.env.example  offchain.compose.production.env.example  offchain.compose.resilience.env.example  offchain.env.example  offchain.production.env.example
docs/: billing-deploy.md  billing-onchain-smoke.md  canonical-request-size-plan.md  contract-only-verif-migration-plan.md  contract-reference.md  corporate-pricing-grid.md  denotary-audit-api.md  denotary-deploy.md  denotary-finality-services.md  denotary-ingress-api.md  denotary-integration-tests.md  denotary-l1-backlog.md  denotary-l1-contract-core.md  denotary-l1-development-plan.md  denotary-l1-discovery.md  denotary-l1-test-matrix.md  denotary-live-chain-integration.md  denotary-live-offchain-services.md  denotary-offchain-deploy.md  denotary-offchain-docker-compose.md  denotary-offchain-resilience-drill.md  denotary-onchain-smoke.md  denotary-production-rollout.md  denotary-public-exposure.md  denotary-rollout-dry-run.md  denotary-security-hardening.md  denotary-website-copy.en.md  denotary-website-copy.ru.md  dfs-hardening-plan.md  dfs-settlement-operations.md  dfs-test-matrix.md  dfs-testnet-bootstrap.md  enterprise-billing-architecture.md  enterprise-deploy.md  enterprise-onchain-smoke.md  external-auditor-runbook.md  external-auditor-verification.md  jungle4-deploy.md  jungle4-deployment-report.md  jungle4-validation-report.md  (+21 more)
include/: dfs.hpp  gfnotary.hpp  managementel.hpp  request_key.hpp  verification.hpp  verification_billing.hpp  verification_billing_tables.hpp  verification_core.hpp  verification_enterprise.hpp  verification_request_size.hpp  verification_retail.hpp  verification_retail_payment.hpp  verification_retail_payment_tables.hpp  verification_retail_tables.hpp  verification_tables.hpp  verification_validators.hpp  verificationlegacywipe.hpp
ricardian/: dfs.clauses.md  dfs.contracts.md  gfnotary.clauses.md  gfnotary.contracts.md  managementel.contracts.md  verif.contracts.md  verifbill.clauses.md  verifbill.contracts.md  verifent.clauses.md  verifent.contracts.md  verification.clauses.md  verification.contracts.md  verification_retail.clauses.md  verification_retail.contracts.md  verifretail.clauses.md  verifretail.contracts.md  verifretpay.clauses.md  verifretpay.contracts.md
scripts/: bootstrap-linux-antelope.sh  build-billing.ps1  build-billing.sh  build-enterprise.ps1  build-enterprise.sh  build-release.ps1  build-release.sh  build-retail.ps1  build-retail.sh  build-retpay.ps1  build-retpay.sh  build-testnet.ps1  build-testnet.sh  check-tauri-windows-env.ps1  deploy-billing-denotary.sh  deploy-billing-jungle4.sh  deploy-denotary.sh  deploy-enterprise-denotary.sh  deploy-enterprise-jungle4.sh  deploy-jungle4.sh  deploy-retail-denotary.sh  deploy-retail-jungle4.sh  deploy-retpay-denotary.sh  deploy-retpay-jungle4.sh  derive-audit-hash.py  migrate-finality-state.py  offchain-healthcheck.sh  offchain-stack.sh  run-audit-api.ps1  run-audit-api.sh  (+39 more)
src/: dfs.cpp  (+12 more)
(+315 files in other folders)
